--- a/example/docker-compose.yml
+++ b/example/docker-compose.yml
@@ -5,9 +5,9 @@ services:
     container_name: openldap
     environment:
       LDAP_LOG_LEVEL: "256"
-      LDAP_ORGANISATION: "Example Inc."
-      LDAP_DOMAIN: "example.org"
-      LDAP_BASE_DN: ""
+      LDAP_ORGANISATION: "Smiles"
+      LDAP_DOMAIN: "SmilesBR"
+      LDAP_BASE_DN: "dc=smiles,dc=br"
       LDAP_ADMIN_PASSWORD: "admin"
       LDAP_CONFIG_PASSWORD: "config"
       LDAP_READONLY_USER: "false"
@@ -15,20 +15,20 @@ services:
       #LDAP_READONLY_USER_PASSWORD: "readonly"
       LDAP_RFC2307BIS_SCHEMA: "false"
       LDAP_BACKEND: "mdb"
-      LDAP_TLS: "true"
-      LDAP_TLS_CRT_FILENAME: "ldap.crt"
-      LDAP_TLS_KEY_FILENAME: "ldap.key"
-      LDAP_TLS_DH_PARAM_FILENAME: "dhparam.pem"
-      LDAP_TLS_CA_CRT_FILENAME: "ca.crt"
-      LDAP_TLS_ENFORCE: "false"
-      LDAP_TLS_CIPHER_SUITE: "SECURE256:-VERS-SSL3.0"
-      LDAP_TLS_VERIFY_CLIENT: "demand"
+      LDAP_TLS: "false"
+      # LDAP_TLS_CRT_FILENAME: "ldap.crt"
+      # LDAP_TLS_KEY_FILENAME: "ldap.key"
+      # LDAP_TLS_DH_PARAM_FILENAME: "dhparam.pem"
+      # LDAP_TLS_CA_CRT_FILENAME: "ca.crt"
+      # LDAP_TLS_ENFORCE: "false"
+      # LDAP_TLS_CIPHER_SUITE: "SECURE256:-VERS-SSL3.0"
+      # LDAP_TLS_VERIFY_CLIENT: "demand"
       LDAP_REPLICATION: "false"
       #LDAP_REPLICATION_CONFIG_SYNCPROV: 'binddn="cn=admin,cn=config" bindmethod=simple credentials="$$LDAP_CONFIG_PASSWORD" searchbase="cn=config" type=refreshAndPersist retry="60 +" timeout=1 starttls=critical'
       #LDAP_REPLICATION_DB_SYNCPROV: 'binddn="cn=admin,$$LDAP_BASE_DN" bindmethod=simple credentials="$$LDAP_ADMIN_PASSWORD" searchbase="$$LDAP_BASE_DN" type=refreshAndPersist interval=00:00:00:10 retry="60 +" timeout=1 starttls=critical'
       #LDAP_REPLICATION_HOSTS: "#PYTHON2BASH:['ldap://ldap.example.org','ldap://ldap2.example.org']"
       KEEP_EXISTING_CONFIG: "false"
-      LDAP_REMOVE_CONFIG_AFTER_SETUP: "true"
+      LDAP_REMOVE_CONFIG_AFTER_SETUP: "false"
       LDAP_SSL_HELPER_PREFIX: "ldap"
     tty: true
     stdin_open: true
@@ -42,7 +42,7 @@ services:
     # For replication to work correctly, domainname and hostname must be
     # set correctly so that "hostname"."domainname" equates to the
     # fully-qualified domain name for the host.
-    domainname: "example.org"
+    domainname: "smiles.local.br"
     hostname: "ldap-server"
   phpldapadmin:
     image: osixia/phpldapadmin:latest
